# Dajmond-Bot

./: .env  .gitignore  ChangeLog.md  Functions.md  LICENSE.md  OLD.py  README.md  main.py  pyproject.toml  requirements.txt
